tenzir/functional-test/data/reference/pipelines_local/test_operator_parsing/step_18.ref
error: the file `./file` does not exist
 --> <input>:1:6
  |
1 | load ./file | read json
  |      ^^^^^^ 
  |